--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <div class="row">
             <div class="col-sm-3">
                 <p>bubbles.</p>
-                <a href="chapter4/Bubbles.html">
-                    <img src="pic_trulli.jpg" alt="Italian Trulli" class="img-responsive" style="width:100%" alt="Image">
+                <a href="/chapter4/Bubbles.html">
+                    <img src="/chapter4/chapter4.png" alt="Italian Trulli" class="img-responsive" style="width:100%" alt="Image">
                 </a>
             </div>
             <div class="col-sm-3">
