--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
     <div class="jumbotron">
         <div class="container text-center">
-            <h1>My Portfolio</h1>
-            <p>Some text that represents "Me"...</p>
+            <h1>Jo's 1st Portfolio</h1>
+            <p>I have been working hard on learning and improving my skills in Javascript, HTML & CSS. These are some of my projects that I've done so far and this is my 1st Bootstrap portfolio! Here's to many more!</p>
         </div>
     </div>
 
