--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="container-fluid bg-3 text-center">
-        <h3>Some of my Work</h3><br>
+        <h3>Here is some of my work so far!</h3><br>
         <div class="row">
             <div class="col-sm-3">
                 <p>Bubbles!</p>
@@ -99,19 +99,19 @@
                 </a>
             </div>
             <div class="col-sm-3">
-                <p>Moving Train</p>
-                <a href="chapter12/function.html"></a>
+                <p>Stop the train before it crashes!</p>
+                <a href="chapter12/function.html">
                 <img src="chapter12/chapter12.PNG" class="chapter12" style="width:100%" alt="Image">
                 </a>
             </div>
             <div class="col-sm-3">
-                <p>Wish List</p>
+                <p>My Wish List</p>
                 <a href="chapter13/wishList.html">
                     <img src="chapter13/chapter13.PNG" class="chapter13" style="width:100%" alt="Image">
                 </a>
             </div>
             <div class="col-sm-3">
-                <p>Order Pizza</p>
+                <p>Jo's Pizza</p>
                 <a href="chapter14/pizza.html">
                     <img src="chapter14/chapter14.png" class="chapter14" style="width:100%" alt="Image">
                 </a>
