--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             <div class="col-sm-3">
                 <p>Martian game</p>
-                <a href="chapter16/adventure.html"></a>
+                <a href="chapter16/adventure.html">
                 <img src="chapter16/chapter16.PNG" class="chapter16" style="width:100%" alt="Image">
                 </a>
             </div>
