--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
                 </a>
 
             </div>
+            <div class="col-sm-3">
+                <p>Alarm Clock</p>
+                <a href="project3/alarm.html">
+                    <img src="project3/alarm.PNG" class="project3" style="width:100%" alt="Image">
+                </a>
+
+            </div>
         </div><br><br>
 
 
