--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
                 </a>
 
             </div>
+            <div class="col-sm-3">
+                <p>Alarm Clock</p>
+                <a href="project4/gamepage.html">
+                    <img src="project4/memory.PNG" class="memory" style="width:100%" alt="Image">
+                </a>
+
+            </div>
         </div><br><br>
 
 
