--- a/index.html
+++ b/index.html
@@ -175,6 +175,16 @@
 
             </div>
         </div><br><br>
+         <div class="container-fluid bg-3 text-center">
+        <div class="row">
+            <div class="col-sm-3">
+                <p>Memory Game</p>
+                <a href="project4/gamepage.html">
+                    <img src="project4/memory.PNG" class="project4" style="width:100%" alt="Image">
+                </a>
+            </div>
+
+        </div>
 
 
         <footer class="container-fluid text-center">
